--- a/bundle_hadoop/src/layouts/default.html
+++ b/bundle_hadoop/src/layouts/default.html
@@ -14,8 +14,8 @@
         <!-- Main -->
         <main class="main" style="color: #FFF;">
             <!-- <div class="container"> -->
-                {{> body }}
-                <!-- main -->
+            {{> body }}
+            <!-- main -->
             <!-- </div> -->
         </main>
         {{> footer}}
@@ -23,6 +23,7 @@
     <!-- JS -->
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/highlightjs.js"></script>
     <script src="assets/js/app.js"></script>
 </body>
 
