--- a/bundle_hadoop/src/partials/footer.html
+++ b/bundle_hadoop/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer style="color: #FFF;">
+<footer>
   <div class="footer-page">
     <div class="footer-page__info">
       <div class="footer-page__email">
