--- a/bundle_hadoop/src/partials/header.html
+++ b/bundle_hadoop/src/partials/header.html
@@ -12,8 +12,8 @@
         </a>
       </li>
       <li class="nav__item dropdown">
-        <a class="nav__link dropbtn">
-          <span class="nav__link-text">
+        <a href="" class="nav__link dropbtn">
+          <span class="nav__link-text drp">
             Products
           </span>
         </a>
@@ -52,7 +52,10 @@
           </span></a>
       </li>
       <li class="nav__item">
-        <a class="nav__link btn_" href="#">Download
+        <a class="nav__link btn_" href="#">
+          <div class="nav__link-button">
+            Download
+          </div>
           <img src="assets/images/donwload.svg" alt="" srcset="">
         </a>
       </li>
