--- a/bundle_hadoop/src/partials/header.html
+++ b/bundle_hadoop/src/partials/header.html
@@ -1,11 +1,13 @@
 <header class="header">
   <nav class="nav">
     <div class="nav__icon">
-      <img src="assets/images/ADDocs.svg" alt="" srcset="">
+      <a href="/">
+        <img src="assets/images/ADDocs.svg" alt="" srcset="">
+      </a>
     </div>
     <ul class="nav__list">
       <li class="nav__item">
-        <a class="nav__link" href="#">
+        <a class="nav__link" href="/">
           <span class="nav__link-text">
             Home
           </span>
@@ -19,7 +21,7 @@
         </a>
         <ul class="dropdown-content">
           <li>
-            <a class="subnav__link" href="#"><span class="subnav__link-text">Arenadata Hadoop</span></a>
+            <a class="subnav__link" href="../hadoop.html"><span class="subnav__link-text">Arenadata Hadoop</span></a>
           </li>
           <li>
             <a class="subnav__link" href="#"><span class="subnav__link-text">Arenadata Database</span></a>
