--- a/bundle_hadoop/src/partials/sidebar.html
+++ b/bundle_hadoop/src/partials/sidebar.html
@@ -1,3 +1,391 @@
 <aside class="sidebar">
-    sidebar
+  <div class="nav-links">
+    <ul id="ul">
+      <li class="nav-links_items">
+        <span class="nav-links_item"
+          ><i class="getstarted"></i>Get Started</span
+        >
+        <ul class="is_parent">
+          <li class="nav-links-li">
+            <a href="#">How to start</a>
+          </li>
+
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">Online installation</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#"> ADCM installation </a>
+              </li>
+
+              <li>
+                <span class="nav-links_item_parent">
+                  <a href="#">Preparing hosts</a>
+                  <i class="chevron chevron_right"></i>
+                </span>
+                <ul class="is_parent">
+                  <li>
+                    <a href="#"> Adding a hostprovider </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding hosts </a>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <span class="nav-links_item_parent">
+                  <a href="#">ADH cluster installation</a>
+                  <i class="chevron chevron_right"></i>
+                </span>
+                <ul class="is_parent">
+                  <li>
+                    <a href="#"> Cluster creation</a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding services </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding hosts to a cluster </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding components</a>
+                  </li>
+                  <li>
+                    <a href="#"> Services configuring </a>
+                  </li>
+                  <li>
+                    <a href="#"> Cluster configuring </a>
+                  </li>
+                  <li>
+                    <a href="#"> Cluster installing</a>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <span class="nav-links_item_parent">
+                  <a href="#">Monitoring installation</a>
+                  <i class="chevron chevron_right"></i>
+                </span>
+                <ul class="is_parent">
+                  <li>
+                    <a href="#"> Cluster creation</a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding services </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding hosts to a cluster </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding components</a>
+                  </li>
+                  <li>
+                    <a href="#"> Services configuring </a>
+                  </li>
+                  <li>
+                    <a href="#"> Cluster installing</a>
+                  </li>
+                  <li>
+                    <a href="#"> Integration with ADH cluster </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+
+          <!-- OFFLINE -->
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">Offline installation</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#"> ADCM installation </a>
+              </li>
+
+              <li>
+                <span class="nav-links_item_parent">
+                  <a href="#">Preparing hosts</a>
+                  <i class="chevron chevron_right"></i>
+                </span>
+                <ul class="is_parent">
+                  <li>
+                    <a href="#"> Adding a hostprovider </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding hosts </a>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <span class="nav-links_item_parent">
+                  <a href="#">Enterprise Tools cluster installation</a>
+                  <i class="chevron chevron_right"></i>
+                </span>
+                <ul class="is_parent">
+                  <li>
+                    <a href="#"> Cluster creation</a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding services </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding hosts to a cluster </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding components</a>
+                  </li>
+
+                  <li>
+                    <a href="#"> Cluster installing</a>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <span class="nav-links_item_parent">
+                  <a href="#">ADH cluster installation</a>
+                  <i class="chevron chevron_right"></i>
+                </span>
+                <ul class="is_parent">
+                  <li>
+                    <a href="#"> Cluster creation</a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding services </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding hosts to a cluster </a>
+                  </li>
+                  <li>
+                    <a href="#"> Adding components</a>
+                  </li>
+
+                  <li>
+                    <a href="#"> Services configuring</a>
+                  </li>
+                  <li>
+                    <a href="#"> Cluster configuring</a>
+                  </li>
+                  <li>
+                    <a href="#"> ET settings importing</a>
+                  </li>
+
+                  <li>
+                    <a href="#"> Cluster installing</a>
+                  </li>
+                </ul>
+              </li>
+
+              <li>
+                <span class="nav-links_item_parent">
+                  <a href="#">Monitoring installation</a>
+                  <i class="chevron chevron_right"></i>
+                </span>
+                <ul class="is_parent">
+                  <li>
+                    <a href="#"> Enterprise Tools cluster configuring</a>
+                  </li>
+                  <li>
+                    <a href="#"> Integration with ADH cluster </a>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+      <!-- Planning guide -->
+      <li class="nav-links_items">
+        <span class="nav-links_item"
+          ><i class="planningguides"></i>Planning guide</span
+        >
+        <ul class="is_parent">
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">Hardware</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#"> NameNodes </a>
+              </li>
+              <li>
+                <a href="#"> Datanodes</a>
+              </li>
+              <li>
+                <a href="#"> YARN and Resource Manager</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="nav-links-li">
+            <a href="#">Recommendations</a>
+          </li>
+          <li class="nav-links-li">
+            <a href="#">Workload patterns</a>
+          </li>
+          <li class="nav-links-li">
+            <a href="#">Pilot cluster</a>
+          </li>
+        </ul>
+      </li>
+
+      <!-- Concepts -->
+      <li class="nav-links_items">
+        <span class="nav-links_item"><i class="concepts"></i>Concepts</span>
+        <ul class="is_parent">
+          <li class="nav-links-li">
+            <a href="#">Core components</a>
+          </li>
+          <li class="nav-links-li">
+            <a href="#">HDFS</a>
+          </li>
+
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">HBase</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#"> Architecture </a>
+              </li>
+              <li>
+                <a href="#"> Data model</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="nav-links-li">
+            <a href="#">YARN and Resource Manager</a>
+          </li>
+          <li class="nav-links-li">
+            <a href="#">MapReduce</a>
+          </li>
+          <li class="nav-links-li">
+            <a href="#">Services</a>
+          </li>
+        </ul>
+      </li>
+
+      <!-- References -->
+      <li class="nav-links_items">
+        <span class="nav-links_item"><i class="references"></i>References</span>
+        <ul class="is_parent">
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">Hadoop Command-line</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#"> references:hadoop-cli.adoc</a>
+              </li>
+              <li>
+                <a href="#"> references:hdfs-cli.adoc</a>
+              </li>
+              <li>
+                <a href="#"> references:hdfs-cheatsheet.adoc</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">MapReduce</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#"> MapReduce User</a>
+              </li>
+              <li>
+                <a href="#"> MapReduce Admin</a>
+              </li>
+            </ul>
+          </li>
+
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">YARN</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#"> references:yarn-cli.adoc</a>
+              </li>
+            </ul>
+          </li>
+          <li>
+            <span class="nav-links_item_parent">
+              <a href="#">Configuration parameters</a>
+              <i class="chevron chevron_right"></i>
+            </span>
+            <ul class="is_parent">
+              <li>
+                <a href="#">Airflow </a>
+              </li>
+              <li>
+                <a href="#">Flink </a>
+              </li>
+              <li>
+                <a href="#">HBase </a>
+              </li>
+              <li>
+                <a href="#">HDFS </a>
+              </li>
+              <li>
+                <a href="#">Hive </a>
+              </li>
+              <li>
+                <a href="#">MySQL </a>
+              </li>
+              <li>
+                <a href="#">Solr </a>
+              </li>
+              <li>
+                <a href="#">Spark </a>
+              </li>
+              <li>
+                <a href="#">Spark3 </a>
+              </li>
+              <li>
+                <a href="#">Sqoop </a>
+              </li>
+              <li>
+                <a href="#">YARN </a>
+              </li>
+              <li>
+                <a href="#">Zeppelin </a>
+              </li>
+              <li>
+                <a href="#">Zookeeper </a>
+              </li>
+            </ul>
+          </li>
+          <li class="nav-links-li">
+            <a href="#">Ports map</a>
+          </li>
+          <li class="nav-links-li">
+            <a href="#">Glossary</a>
+          </li>
+        </ul>
+      </li>
+
+      <!-- Release notes  -->
+      <li class="nav-links_items">
+        <span class="nav-links_item"
+          ><i class="releasenotes"></i>
+          <a href="#">Release notes</a>
+        </span>
+      </li>
+    </ul>
+  </div>
 </aside>
