--- a/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/sidebar.scss
@@ -1,38 +1,215 @@
-// .sidebar {
-//     width: $sidebar-width;
-//     height: 100vh;
-
-//     background-color: $primary;
-//     box-shadow: 5px 0 15px rgba(#050505, .1);
-
-//     position: fixed;
-//     top: 0;
-//     left: 0;
-//     z-index: $z-index-sidebar;
-// }
-
-// .sidebar__header {
-//     height: 180px;
-//     background-color: $secondary;
-
-//     img {
-//         display: block;
-//         width: 100%;
-//         height: 100%;
-//         object-fit: cover;
-//     }
-// }
-
-// .sidebar__content {
-//     padding: 0 2rem;
-//     margin-top: -5rem;
-// }
-
-// .sidebar__footer {
-//     display: flex;
-//     justify-content: space-between;
-//     padding: 0 2rem;
-// }
 .sidebar {
-    display: none;
+  color: #fff;
+}
+
+// .nav-links {
+//   scrollbar-width: thin;
+//   scrollbar-color: #00d2a0;
+// }
+
+/* для Chrome/Edge/Safari */
+.nav-links::-webkit-scrollbar {
+  height: 60px;
+  width: 5px;
+}
+.nav-links::-webkit-scrollbar-track {
+  background: transparent;
+}
+.nav-links::-webkit-scrollbar-thumb {
+  background-color: #00d2a0;
+  border-radius: 5px;
+}
+
+.nav-links {
+  height: calc(80vh);
+  overflow-y: auto;
+}
+
+.nav-links_item {
+  cursor: pointer;
+  user-select: none;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  //   padding: 12px 0px 12px 12px;
+
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 21px;
+  /* identical to box height */
+
+  /* Off White */
+
+  color: #fcfcfd;
+}
+
+// .nav-links-li {
+//   padding: 12px 0px 12px 40px;
+// }
+
+.is_parent li {
+  padding: 12px 0;
+}
+
+.nav-links_items > ul {
+  padding-left: 76px;
+  padding: 0 0 0 76px;
+}
+
+.nav-links_item {
+  padding: 16px 0 16px 40px;
+}
+
+.is_parent {
+  display: none;
+  padding: 12px 0 0 12px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+
+  color: #c4c4c4;
+}
+
+.nav-links-li:hover {
+  color: #00d2a0;
+}
+
+.nav-links_items {
+  margin-right: 23px;
+}
+
+.nav-links_item_parent {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  //   padding: 12px 0px 12px 12px;
+}
+
+.nav-links-li a {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  /* identical to box height, or 133% */
+
+  /* Grey Lighter */
+
+  color: #c4c4c4;
+}
+
+.nav-links_item_parent a {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #c4c4c4;
+}
+
+.nav-links_item_parent:hover {
+  color: red;
+  cursor: pointer;
+}
+// .nav-links_item::before {
+//   content: "\25B6";
+//   color: black;
+//   display: inline-block;
+//   margin-right: 5px;
+// }
+.caret-down::before {
+  transform: rotate(90deg);
+}
+
+.is_parent li a:hover {
+  color: #00d2a0;
+}
+
+.is_parent li a {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 20px;
+  color: #c4c4c4;
+}
+
+.active {
+  display: block;
+}
+
+.chevron_right {
+  padding-right: 10px;
+  width: 8px;
+  height: 12px;
+  background-image: url("/assets/images/chevron-right.svg");
+}
+
+// .nav-links_item .chevron_right {
+//   transform: rotate(90deg);
+// }
+
+.nav-links_item:hover {
+  color: #00d2a0;
+}
+
+.chevron_down {
+  width: 12px;
+  height: 8px;
+  padding-right: 10px;
+  background-image: url("/assets/images/chevron-down.svg");
+}
+
+.getstarted {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 24px;
+  width: 24px;
+  height: 24px;
+  margin-right: 12px;
+  background-image: url("/assets/images/getstarted.svg");
+}
+
+.planningguides {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 24px;
+  width: 24px;
+  height: 24px;
+  margin-right: 12px;
+  background-image: url("/assets/images/planningguides.svg");
+}
+
+.concepts {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 24px;
+  width: 24px;
+  height: 30px;
+  margin-right: 12px;
+  background-image: url("/assets/images/concepts.svg");
+}
+
+.references {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 24px;
+  width: 24px;
+  height: 24px;
+  margin-right: 12px;
+  background-image: url("/assets/images/references.svg");
+}
+
+.releasenotes {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 24px;
+  width: 24px;
+  height: 24px;
+  margin-right: 12px;
+  background-image: url("/assets/images/releasenotes.svg");
+}
+
+.nav-links_item a:hover {
+  color: #00d2a0;
 }
