--- a/bundle_hadoop/src/assets/scss/blocks/page.scss
+++ b/bundle_hadoop/src/assets/scss/blocks/page.scss
@@ -2,39 +2,47 @@
 //     overflow: hidden;
 // }
 .page {
-    display: grid;
-    grid-template-columns: minmax(70px, 307px) 1fr;
-    grid-template-rows: 72px 1fr 468px;
-    grid-template-areas:
-        "header header"
-        "main main"
-        "footer footer"
-    ;
+  display: grid;
+  grid-template-columns: minmax(70px, 307px) 1fr;
+  grid-template-rows: 72px 1fr 468px;
+  grid-template-areas:
+    "header header"
+    "main main"
+    "footer footer";
 }
 
 .page_nav {
-    display: grid;
-    grid-template-columns: minmax(70px, 307px) 1fr;
-    grid-template-rows: 72px 1fr 468px;
-    grid-template-areas:
-        "header header"
-        "aside main"
-        "footer footer"
-    ;
+  display: grid;
+  grid-template-columns: 307px 1fr;
+  grid-template-rows: 72px 1fr 468px;
+  grid-template-areas:
+    "header header"
+    "aside main"
+    "footer footer";
+}
+
+.page_nav-sm {
+  display: grid;
+  grid-template-columns: 150px 1fr;
+  grid-template-rows: 72px 1fr 468px;
+  grid-template-areas:
+    "header header"
+    "aside main"
+    "footer footer";
 }
 
 header {
-    grid-area: header;
+  grid-area: header;
 }
 
 aside {
-    grid-area: aside;
+  grid-area: aside;
 }
 
 main {
-    grid-area: main;
+  grid-area: main;
 }
 
 footer {
-    grid-area: footer;
+  grid-area: footer;
 }
